# niodoo-shimeji

./: .gitignore  CHANGELOG.md  CODE_REVIEW.md  ENHANCEMENT_REVIEW.md  LICENSE  README.md  config.py  gemini_deep_research_prompt.txt  gemini_shimeji_agent.py  install.sh  niodoo_shimeji_bridge.py  pytest.ini  shimeji.env.example  shimeji_dual_mode_agent.py  shimeji_mcp_server.py
cpp-qt-brain-integration/: CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  RUNPOD_SETUP.md  SHIMEJI_COMPANION_README.md  TEST_PLAN.md  build-shimeji.sh
docs/: agent_core_plan.md  architecture.md
modules/: agent_core.py  app_context.py  atspi_integration.py  audio_processor.py  chat_database.py  constants.py  context_manager.py  context_sniffer.py  dbus_integration.py  decision_executor.py  desktop_controller.py  dialogue_manager.py  emotion_model.py  encryption_manager.py  event_bus.py  feedback_learner.py  file_handler.py  genai_utils.py  gesture_recognizer.py  input_sanitizer.py  invocation_server.py  journal_monitor.py  mascot_state_machine.py  memory_manager.py  metrics.py  multi_agent.py  pattern_learner.py  permission_manager.py  plugin_base.py  presentation_api.py  privacy_filter.py  privacy_filter_hybrid.py  productivity_tools.py  speech_bubble.py  structured_logger.py  system_monitor.py  tool_schema_factory.py  user_model_synthesis.py  vector_memory.py  vector_store.py  (+2 more)
tests/: conftest.py  test_agent_core.py  test_context_manager.py  test_decision_executor.py  test_dialogue_manager.py  test_dual_mode_agent_init.py  test_file_handler.py  test_input_sanitizer.py  (+8 more)
(+10 files in other folders)
